03_Project/src/test/resources/cocos/invalid/DuplicateToEdge.pn
petrinet H2O {

    place H2 initial 2;
    place O2 initial 2;
    place H2O;

    transition t:
        2 <- H2
        1 <- O2
        2 -> H2O
        1 -> H2O
}